rules/internal-networking/test/namespace-ccnp-match-expressions-selective-failed/input/cilium_clusterwide_network_policy.yml
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: selective-ccnp
spec:
  endpointSelector:
    matchLabels: {}
    matchExpressions:
      - key: role
        operator: In
        values:
          - frontend
  ingress:
    - fromEndpoints:
        - matchLabels: {}
  egress:
    - toEndpoints:
        - matchLabels: {}
